--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </script>
         //-->
 
-    <script type="text/javascript" src="../floodfill.min.js"></script>
+    <script type="text/javascript" src="floodfill.min.js"></script>
 
     <script type="text/javascript">
         
